birthday-website/styles.css
body {
  background: linear-gradient(#bcf4f5, #ffb7c3);
  text-align: center;
  font-family: "Happy Monkey", sans-serif;
  color: white;
}
.header {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#bff-img {
  width: 150px;
  border-radius: 50%;
  border: 6px solid #ffb7c3;
}
h1,
h2,
h3,
h4,
p {
  text-shadow: 0px 0px 2px black;
}
#bff-age {
  background-color: #ffb7c3;
  border-radius: 10px;
  padding: 8px 16px;
  margin: 5px 0 10px 0;
}
#bff-date {
  background-color: #ffb7c3;
  border-radius: 10px;
  padding: 8px 16px;
  margin-top: 0;
}
.gift-section {
  margin-top: 50px;
}
.gift-title {
  margin-bottom: 10px;
}
.gift-hint {
  margin-top: 0;
}
.gift-img {
  background-image: url("./images/gift-wrapper.jpg");
  background-size: cover;
  width: 400px;
  height: 400px;
  margin: 0 auto;
  border: 6px solid white;
  border-radius: 10px;
}
#gift-img-happy:hover {
  background-image: url("./images/happy.webp");
}
#gift-img-hot:hover {
  background-image: url("./images/hot.webp");
}
#gift-img-genius:hover {
  background-image: url("./images/genius.gif");
}
#gift-img-badass:hover {
  background-image: url("./images/badass.gif");
}
#gift-img-mine {
  height: 200px;
}
#gift-img-mine:hover {
  background-image: url("./images/cheers.gif");
}
.footer {
  font-style: italic;
  width: 400px;
  margin: 20px auto 40px auto;
}
.footer a {
  color: white;
}

